# utbots_voice

./: .gitexternals  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
launch/: tts_coqui.launch
nlu_ros/: CMakeLists.txt  README.md  package.xml
nlu_ros/assets/: .2022qa.csv  commands.csv  drinks.csv  people.csv  qa.csv  stored_commands.csv
nlu_ros/launch/: commands_extractor.launch  question_answerer.launch
nlu_ros/src/: commands_extractor.py  nlu_node.py  question_answerer.py
src/: ros_stt.py  ros_stt_test.py  ros_tts_coqui.py  ros_tts_mimic.py
utbots_at_home_voice/: CMakeLists.txt  ROS Voice Message_0.0.2_apkcombo.com.apk  package.xml
utbots_at_home_voice/launch/: commands.launch  utbots_at_home_voicerecog.launch
utbots_at_home_voice/scripts/: Comandos.csv  FrasesCorretas.csv  FrasesCorretasCarryLuggage.csv  FrasesCorretasOld.csv  FrasesTreinamento.csv  JabTFIDFIdent.py  JabTextIdent.py  Respostas.csv  d2v.model  d2v_e100_v300.model  d2v_e10_v20.model  d2v_e10_v300.model  d2v_e150_v500.model  d2v_e1_v300.model  d2v_e20_v100.model  d2v_e30_v300.model  d2v_e50_v500.model  listen.py  listen_for_commands.py  listenerBuiar.py  listenerDV07112020.py  listener_08112020_comTFIDF.py  listener_OK2.py  teste0711.txt
utbots_at_home_voice/scripts/NewVersion1.2/: FrasesCorretas.csv  JabDoc2VecIdent.py  JabTFIDFIdent.py  testeid.py
utbots_at_home_voice/src/: bridge_sub_pub.cpp  publish.cpp  subscribe.cpp
utbots_stt/: README.md
utbots_stt/vad_silero_ros/: CMakeLists.txt  package.xml
utbots_stt/vad_silero_ros/src/: vad_node.cpp
utbots_stt/whisper_cpp_ros/: CMakeLists.txt  package.xml
utbots_stt/whisper_cpp_ros/launch/: utbots_stt.launch
utbots_stt/whisper_cpp_ros/src/: vad_iterator.hpp  vad_node.cpp  whisper_node.cpp
utbots_stt/whisper_cpp_ros/whisper.cpp/: whisper.cpp
utbots_tts/: README.md  package.xml
utbots_tts/launch/: tts_mimic.launch
utbots_tts/resources/audios/indexed/: index.csv
utbots_tts/src/: ros_tts_coqui.py  ros_tts_mimic.py
utbots_tts/utbots_tts/: CMakeLists.txt
utbots_tts/utbots_tts/launch/: tts_coqui.launch
utbots_tts/utbots_tts/resources/audios/indexed/: index.csv
utbots_tts/utbots_tts/src/: ros_tts_mimic.py
utbots_voice/: package.xml
utbots_voice/launch/: tts_mimic.launch
utbots_voice/src/: ros_tts_mimic.py
voice_msgs/: CMakeLists.txt  package.xml
voice_msgs/msg/: NLU.msg
