<?xml version="1.0"?>
<package format="2">
  <name>voice_msgs</name>
  <version>1.0.0</version>
  <description>Custom voice messages package</description>

  <maintainer email="utbots.home@gmail.com">UtBots@Home Team</maintainer>

  <license>BSD</license>

  <author email="utbots.home@gmail.com">UtBots@Home Team</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
